# sxt-node

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  mainnet.md  sxtnode.Dockerfile  testnet.md
.github/: check-version.sh  pull_request_template.md
.github/actions/macos-dependencies/: action.yml
.github/workflows/: check-runtime-changes.yml  ci.yml  preview-release.yml  publish.yml  publish_shared.yml  release.yml
attestation_tree/: Cargo.toml  README.md
attestation_tree/src/: attestation_tree.rs  commitment_map_prefix_foliate.rs  hash_and_key.rs  lib.rs  locks_staking_prefix_foliate.rs  prefix_foliate.rs
canaries/: Cargo.toml  Dockerfile
canaries/src/: main.rs
chain-utils/: Cargo.toml
chain-utils/src/: common.rs  fetch_submissions.rs  load_tables.rs  main.rs  print_batch.rs  test_staking.rs
chainspecs/: testnet-validators.json
chainspecs/raw/: devnet-spec.json  mainnet-spec.json  testnet-spec.json
data-loader/: Cargo.toml  README.md
data-loader/src/: azure_data_loader.rs  checkpoint.rs  data_loader.rs  error.rs  lib.rs  to_pg.rs
docs/: mainnet.md
event-forwarder/: Cargo.toml  Dockerfile
event-forwarder/artifacts/: 0xd27Da90dfaabE287B572919A6f0aeEBc79a2Ed7e.json  EventForwarder.json  OldEventForwarder.json  Verifier.json  abi.json  abi2.json
event-forwarder/src/: block_processing.rs  chain_listener.rs  event_forwarder.rs  event_forwarder_contract.rs  kitchen_sink.rs  lib.rs  main.rs
native/: Cargo.toml  test-ethereum-blocks-batch
native-api/: Cargo.toml
native-api/src/: lib.rs
native/src/: lib.rs  sxt.rs
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/testing/: ddl.sql  test.commits  test_ddl.sql
pallets/attestation/: Cargo.toml
pallets/attestation/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/commitments/: Cargo.toml  README.md
pallets/commitments/src/: error_conversions.rs  lib.rs  mock.rs  runtime_api.rs  test_create_table.rs  test_create_table_from_snapshot.rs  test_create_table_generic.rs  test_initiate_precomputed_commitments.rs  test_insert.rs  test_table_commitments.rs
pallets/indexing/: Cargo.toml  benchmark-integers-row-data-large  benchmark-integers-row-data-small
pallets/indexing/src/: benchmarking.rs  error_conversions.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/indexing/src/migrations/: mod.rs
pallets/indexing/src/migrations/v1/: mod.rs  tests.rs
pallets/indexing/src/migrations/v2/: mod.rs  tests.rs
pallets/keystore/: Cargo.toml
pallets/keystore/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/permissions/: Cargo.toml  README.md
pallets/permissions/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/rewards/: Cargo.toml  README.md
pallets/rewards/src/: lib.rs  mock.rs  tests.rs
pallets/smartcontracts/: Cargo.toml
pallets/smartcontracts/src/: lib.rs  mock.rs  native_pallet.rs  tests.rs  weights.rs
pallets/system-contracts/: Cargo.toml  README.md
pallets/system-contracts/src/: lib.rs  mock.rs  tests.rs
pallets/system_tables/: Cargo.toml  MESSAGES.md
pallets/system_tables/src/: lib.rs  messages.rs  mock.rs  parse.rs  tests.rs  zkpay.rs
pallets/tables/: Cargo.toml
pallets/tables/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
proof-of-sql/commitment-map/: Cargo.toml  README.md
proof-of-sql/commitment-map/examples/: pallet.rs
proof-of-sql/commitment-map/src/: commitment_map.rs  commitment_map_implementor.rs  commitment_scheme.rs  commitment_storage_map.rs  generic_over_commitment.rs  generic_over_commitment_fn.rs  lib.rs  memory_commitment_map.rs
proof-of-sql/commitment-sql/: Cargo.toml  README.md
proof-of-sql/commitment-sql/src/: column_options.rs  column_type_conversion.rs  create_table.rs  create_table_from_snapshot.rs  insert.rs  lib.rs  metadata_prefix.rs  row_number_column.rs  validated_create_table.rs
proof-of-sql/on-chain-table/: Cargo.toml  README.md
proof-of-sql/on-chain-table/src/: arrow_column_conversion.rs  arrow_table_conversion.rs  column.rs  i256_conversion.rs  lib.rs  map.rs  table.rs  u256_scalar_conversion.rs
proof-of-sql/static-setups/: Cargo.toml  README.md  public_parameters_nu_1
proof-of-sql/static-setups/src/: baked.rs  lib.rs
proof-of-sql/static-setups/src/io/: args.rs  cells.rs  mod.rs  test_directory.rs
publish/docker/: VERSION
publish/docker/sxt-attestor/: Dockerfile
rpc/: Cargo.toml
rpc/src/: lib.rs
rpc/src/attestation/: api.rs  api_impl.rs  error.rs  mod.rs
rpc/src/commitments/: api.rs  api_impl.rs  error.rs  limits.rs  mod.rs  proof_plan_for_query_and_commitments.rs  statement_and_associated_table_refs.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  tests.rs
scripts/: init-db.sh  metadata.sql  start-flightsql.sh  sxtnode.sh
sxt-core/: Cargo.toml  sepolia_event_forwarder_abi.json
sxt-core/src/: attestation.rs  indexing.rs  keystore.rs  lib.rs  native.rs  permissions.rs  smartcontracts.rs  sql.rs  sxt_chain_runtime.rs  system_contracts.rs  tables.rs  utils.rs
test-network/validator0/: nodekey.txt  phrase.txt  seed.txt
test-network/validator1/: nodekey.txt  phrase.txt  seed.txt
translation-layer/: Cargo.toml  README.md  create_table.sh  dockerfile  openapi.json  smartcontract.sh
translation-layer/src/: error.rs  lib.rs  main.rs  model.rs  signer.rs  state.rs  table_builder.rs  tx_progress.rs  tx_submitter.rs  utils.rs
translation-layer/src/api/: extrinsics.rs  mod.rs  smartcontracts.rs  tables.rs
utils/commit-grouper/: Cargo.toml
utils/commit-grouper/src/: lib.rs  main.rs
utils/commit-grouper/testing/: -ETHEREUM-CONTRACT_EVT_APPROVALFORALL-dory-commitment.txt  -ETHEREUM-CONTRACT_EVT_OWNERSHIPTRANSFERRED-dory-commitment.txt  -ETHEREUM-ERC1155_EVT_TRANSFERBATCH-dory-commitment.txt
watcher/: Cargo.toml  Dockerfile  README.md
watcher/src/: lib.rs  main.rs
watcher/src/attestation/: fetch.rs  mod.rs
(+35 files in other folders)
