[workspace.package]
license = "MIT-0"
authors = ["Space and Time Labs", "Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/spaceandtimelabs/sxt-node"
repository = "https://github.com/spaceandtimelabs/sxt-node.git"
edition = "2021"

[workspace]
members = [
    "attestation_tree",
    "node",
    "rpc",
    "watcher",
    "pallets/indexing",
    "pallets/tables",
    "pallets/permissions",
    "pallets/commitments",
    "pallets/system_tables",
    "proof-of-sql/commitment-map",
    "runtime",
    "sxt-core",
    "data-loader",
    "proof-of-sql/on-chain-table",
    "proof-of-sql/commitment-sql",
    "proof-of-sql/static-setups",
    "native",
    "native-api",
    "utils/commit-grouper",
    "watcher",
    "pallets/attestation",
    "pallets/rewards",
    "pallets/keystore",
    "pallets/smartcontracts",
    "event-forwarder", 
    "chain-utils",
    "translation-layer",
    "pallets/system-contracts",
    "canaries"
]
exclude = [
    "utoipa",  
]
resolver = "2"

[workspace.dependencies]
event-forwarder = { path = "./event-forwarder"}
watcher = { path = "./watcher"}
translation-layer = { path = "./translation-layer"}
tokio = { version = "1.41.0", default-features = false }
ahash = { version = "0.8.11", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
arrow = { version = "54.2.1", default-features = false }
attestation_tree = { path = "./attestation_tree/", default-features = false }
bigdecimal = { version = "0.4.5", default-features = false }
bincode = { version = "2.0.0", default-features = false }
const_format = { version = "0.2.33", default-features = false }
commitment-sql = { path = "./proof-of-sql/commitment-sql/", default-features = false }
data-loader = { path = "./data-loader", default-features = false }
datafusion = { version = "38.0.0", default-features = false }
arrow-flight = { version = "54.2.1", default-features = false }
sxt-runtime = { path = "./runtime", default-features = false }
pallet-rewards = { path = "./pallets/rewards", default-features = false }
pallet-commitments = { path = "./pallets/commitments", default-features = false }
pallet-permissions = { path = "pallets/permissions", default-features = false }
pallet-attestation = { path = "pallets/attestation", default-features = false }
pallet-keystore = { path = "pallets/keystore", default-features = false }
pallet-system-contracts = { path = "pallets/system-contracts", default-features = false }
pallet-system-tables = { path = "pallets/system_tables", default-features = false }
pallet-smartcontracts = { path = "pallets/smartcontracts", default-features = false}
sxt-core = { path = "sxt-core", default-features = false}
pallet-tables = { path = "pallets/tables", default-features = false}
pallet-indexing = { path = "pallets/indexing", default-features = false }
native = { path = "native", default-features = false }
native-api = { path = "native-api", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num_cpus = { version = "1.16.0" }
clap = { version = "4.5.3" }
exponential-backoff = { version = "2.0.0", default-features = false }
curve25519-dalek = { version = "4.1.3", default-features = false }
frame-benchmarking-cli = { version = "43.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
futures = { version = "0.3.30" }
indexmap = { version = "2.5.0", default-features = false }
itertools = { version = "0.12.1", default-features = false }
jsonrpsee = { version = "0.24.3" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
on-chain-table = { path = "./proof-of-sql/on-chain-table/", default-features = false }
postcard = { version = "1.0.10", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
proof-of-sql = { version = "0.99.0", default-features = false }
proof-of-sql-planner = { version = "0.99.0", default-features = false }
proof-of-sql-commitment-map = { path = "./proof-of-sql/commitment-map/", default-features = false }
proof-of-sql-static-setups = { path = "./proof-of-sql/static-setups/", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rayon = { version = "1.10.0" }
snafu = { version = "0.8.4", default-features = false }
sqlparser = { version = "0.45.0", default-features = false }
pallet-transaction-payment = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }
tonic = { version = "0.12.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sc-basic-authorship = { version = "0.45.0", default-features = false }
sc-cli = { version = "0.47.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.44.0", default-features = false }
sc-consensus-aura = { version = "0.45.0", default-features = false }
sc-consensus-grandpa = { version = "0.30.0", default-features = false }
sc-executor = { version = "0.40.1", default-features = false }
sc-network = { version = "0.45.0", default-features = false }
sc-offchain = { version = "40.0.0", default-features = false }
sc-rpc-api = { version = "0.44.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }
sc-telemetry = { version = "25.0.0", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
serde = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
subxt = { version = "0.38.0", default-features = false }
subxt-signer = { version = "0.38", default-features = false}
substrate-frame-rpc-system = { version = "39.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-aura = { version = "37.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-grandpa = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-multisig = { version = "38.0.0", default-features = false }
pallet-migrations = { version = "8.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
substrate-wasm-builder = { version = "24.0.1", default-features = false }
pallet-session = { version = "38.0.0", default-features = false, features = [
    "historical",
] }

pallet-staking = { version = "38.0.0", default-features = false }
pallet-authorship = { version = "38.0.0", default-features = false }
pallet-im-online = { version = "37.0.0", default-features = false }
pallet-offences = { version = "37.0.0", default-features = false }
pallet-authority-discovery = { version = "38.0.0", default-features = false }
pallet-election-provider-multi-phase = { version = "37.0.0", default-features = false }
pallet-babe = { version = "38.0.0", default-features = false }
pallet-indices = { version = "38.0.0", default-features = false }
sc-consensus-babe = { version = "0.45.0", default-features = false }
sc-consensus-babe-rpc = { version = "0.45.0", default-features = false }
sp-consensus-babe = { version = "0.40.0", default-features = false }
sc-consensus-grandpa-rpc = { version = "0.30.0", default-features = false }
sp-transaction-storage-proof = { version = "34.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-staking = { version = "36.0.0", default-features = false }
frame-election-provider-support = { version = "38.0.0", default-features = false }
pallet-bags-list = { version = "37.0.0", default-features = false }
pallet-utility = { version = "38.0.0", default-features = false }
sp-runtime-interface = { version = "28.0.0", default-features = false }
pallet-staking-runtime-api = { version = "24.0.0", default-features = false }
sc-sync-state-rpc = { version = "0.45.0", default-features = false }
substrate-state-trie-migration-rpc = { version = "38.0.0", default-features = false }
node-rpc = { path = "./rpc", default-features = false }
sc-chain-spec = { version = "38.0.0", default-features = false }
sc-rpc = { version = "40.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
sp-consensus = { version = "0.40.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-statement-store = { version = "18.0.0", default-features = false }
sc-statement-store = { version = "19.0.1", default-features = false }
pallet-statement = { version = "20.0.0", default-features = false }
sc-network-statement = { version = "0.27.0", default-features = false }
sc-storage-monitor = { version = "0.22.0", default-features = false }
sc-network-sync = { version = "0.44.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.3" }

k256 = { version = "0.13.4", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
handlebars = { version = "5.1.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
spin = "0.9.8"
alloy = { version = "0.11.0", default-features = false }
glob = "0.3.1"
eth_merkle_tree = { version = "=0.1.1", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
rand_core = { version = "0.6", default-features = false }
log = { version = "0.4", default-features = false }
async-trait = { version = "0.1.86", default-features = false }
env_logger = { version = "0.11.6", default-features = false }
url = { version = "2.5.4", default-features = false }
reqwest = { version = "0.11", default-features = false }
async-stream = { version = "0.3.6", default-features = false }
sc-consensus-slots = { version = "0.44.0", default-features = false }
sc-authority-discovery = { version = "0.45.0", default-features = false }
sp-authority-discovery = { version = "34.0.0", default-features = false }
axum = { version = "0.8.0", default-features = false }
tower-http = { version = "0.5", default-features = false}
utoipa = { version = "5.3.1", default-features = false}
utoipa-swagger-ui = { version = "9.0.1", default-features = false}
utoipa-axum = { version = "0.2.0", default-features = false }
linked-list = { version = "0.1.0", default-features = false }
base64 = { version = "0.21", default-features = false }
regex = { version = "1.11.1", default-features = false }
prometheus = "0.14.0"

[workspace.lints]
rust.missing_docs = "warn"
clippy.missing_docs_in_private_items = "warn"

[patch.crates-io]
# patch for sqlparser no_std compatibility with the serde feature enabled.
# required until sqlparser releases a similar update and proof-of-sql upgrades to it.
sqlparser = { git = "https://github.com/tlovell-sxt/datafusion-sqlparser-rs.git", rev = "a828cbea22cf19bb6b4596f902bdd6f4d14a00b8" }

