[package]
name = "canaries"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
event-forwarder.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
subxt = { workspace = true, features = ["jsonrpsee", "native", "default", "substrate-compat"] }
subxt-signer = { workspace = true }
sxt-core = { workspace = true, features = ["std"] }
sxt-runtime = { workspace = true, features = ["std"] }
log = { workspace = true }
snafu = { workspace = true }
env_logger = { workspace = true }
url = { workspace = true }
lazy_static.workspace = true
prometheus.workspace = true
axum = { workspace = true, default-features = true }
anyhow.workspace = true
async-trait.workspace = true

[lints]
workspace = true
