[package]
name = "native-api"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
sxt-core.workspace = true
native.workspace = true
proof-of-sql-commitment-map = { workspace = true, features = ["substrate"] }

[features]
default = ["std"]
std = [
    'sxt-core/std',
    'native/std'
]
