[package]
name = "node-rpc"
version = "0.1.0"
authors.workspace = true
description = "Space and Time node rpc methods."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
attestation_tree.workspace = true
bincode.workspace = true
codec.workspace = true
datafusion.workspace = true
frame-support.workspace = true
indexmap = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
pallet-attestation = { workspace = true, default-features = false, features = ["std"] }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-system-contracts = { workspace = true, default-features = true }
proof-of-sql = { workspace = true }
proof-of-sql-planner = { workspace = true }
proof-of-sql-commitment-map = { workspace = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus-babe = { workspace = true, default-features = true }
sc-consensus-babe-rpc = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-consensus-grandpa-rpc = { workspace = true, default-features = true }
sc-rpc = { workspace = true, default-features = true }
sc-sync-state-rpc = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
serde = { workspace = true }
snafu = { workspace = true }
sp-api = { workspace = true, default-features = true, features = ["std"] }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-statement-store = { workspace = true, default-features = true }
sqlparser = { workspace = true, features = ["std", "visitor"] }
substrate-frame-rpc-system = { workspace = true, default-features = true }
substrate-state-trie-migration-rpc = { workspace = true, default-features = true }
sxt-core = { workspace = true }
sxt-runtime = { workspace = true, default-features = false, features = ["std"] }

hex.workspace = true

[dev-dependencies]
proof-of-sql-static-setups = { workspace = true, features = ["io"] }
commitment-sql = { workspace = true }
on-chain-table.workspace = true
itertools.workspace = true
