[package]
name = "sxt-runtime"
description = "Space and Time Transaction Node Runtime"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
	"serde",
], workspace = true }
frame-support = { features = ["experimental"], workspace = true }
frame-system.workspace = true
frame-try-runtime = { optional = true, workspace = true }
frame-executive.workspace = true
native-api.workspace = true
pallet-aura.workspace = true
pallet-balances.workspace = true
pallet-grandpa.workspace = true
pallet-sudo.workspace = true
pallet-multisig.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura = { features = ["serde"], workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-session.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version = { features = ["serde"], workspace = true }
sp-genesis-builder.workspace = true
frame-system-rpc-runtime-api.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
frame-benchmarking = { optional = true, workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
pallet-commitments.workspace = true
pallet-session = { workspace = true, features = ["historical"]}
sp-std.workspace = true
pallet-permissions.workspace = true
pallet-tables.workspace = true
pallet-indexing.workspace = true
pallet-attestation.workspace = true
pallet-keystore.workspace = true
pallet-smartcontracts.workspace = true

pallet-system-tables.workspace = true
pallet-system-contracts.workspace = true
pallet-staking.workspace = true
pallet-staking-runtime-api.workspace = true
pallet-authorship.workspace = true
pallet-im-online.workspace = true
pallet-offences.workspace = true
pallet-authority-discovery.workspace = true
pallet-election-provider-multi-phase.workspace = true
pallet-babe.workspace = true
pallet-indices.workspace = true
sp-consensus-babe.workspace = true
sp-staking.workspace = true
frame-election-provider-support.workspace = true
pallet-bags-list.workspace = true
pallet-utility.workspace = true
sp-arithmetic.workspace = true
sp-statement-store.workspace =true
pallet-statement.workspace = true
sp-authority-discovery.workspace = true

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
fast-runtime = []
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"pallet-smartcontracts/std",
	"native-api/std",
	"pallet-keystore/std",
	"sp-arithmetic/std",
	"sp-statement-store/std",
	"pallet-statement/std",
	"pallet-staking-runtime-api/std",
	"pallet-attestation/std",
	"pallet-indexing/std",
	"pallet-tables/std",
	"pallet-permissions/std",
	"pallet-session/std",
	"pallet-system-tables/std",
	"pallet-system-contracts/std",
	"sp-std/std",
	"codec/std",
	"scale-info/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",

	"frame-benchmarking?/std",
	"frame-try-runtime?/std",

	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-multisig/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"pallet-staking/std",
	"pallet-authorship/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-authority-discovery/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-babe/std",
	"pallet-indices/std",
	"sp-consensus-babe/std",
	"sp-staking/std",
	"frame-election-provider-support/std",
	"pallet-bags-list/std",
	"pallet-utility/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"pallet-keystore/runtime-benchmarks",
	"pallet-attestation/runtime-benchmarks",
	"pallet-indexing/runtime-benchmarks",
	"pallet-permissions/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-statement/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-indices/try-runtime",
	"frame-election-provider-support/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-utility/try-runtime",
]

[lints]
workspace = true
