[package]
name = "sxt-core"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false, features = ["experimental"] }
frame-system = { workspace = true, default-features = false }
snafu = { workspace = true }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false}
sp-runtime-interface = { workspace = true }
sqlparser = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"]}
postcard = { workspace = true, features = ["alloc"] }
on-chain-table = { workspace = true, default-features = false }
tonic = { workspace = true, optional = true }
arrow = { workspace = true, optional = true, features = ["ipc"]}
arrow-flight = { workspace = true, optional = true, features = ["flight-sql-experimental"] }
subxt = { workspace = true, optional = true, features = ["native", "reconnecting-rpc-client"] }
data-loader = { workspace = true, optional = true }
glob.workspace = true
tokio = { workspace = true, optional = true }
sc-client-api = { workspace = true, default-features = false, optional = true }
sp-blockchain = { workspace = true, default-features = false, optional = true }
sp-api = { workspace = true, default-features = false, optional = true}
proof-of-sql = { workspace = true, default-features = false }
exponential-backoff = { workspace = true, default-features = false, optional = true }
k256 = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
alloy = { workspace = true, optional = true, features = ["full"]}
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
regex = { workspace = true, default-features = false }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["std"]
std = [
	"dep:alloy",
	"hex/std",
	"k256/std",
	"sha3/std",
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"on-chain-table/arrow",
	"scale-info/std",
	"dep:tokio",
	"dep:tonic",
	"dep:arrow",
	"dep:arrow-flight",
	"dep:subxt",
	"dep:data-loader",
	"dep:sp-api",
	"dep:sc-client-api",
	"dep:sp-blockchain",
	"dep:exponential-backoff",
]

[lints]
workspace = true
