[package]
name = "watcher"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
attestation_tree = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
frame-support = { workspace = true, features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
pallet-system-contracts = { workspace = true, features = ["std"] }
subxt = { version = "0.38.0" , features = ["jsonrpsee", "native", "default", "substrate-compat"]}
subxt-signer = { version = "0.38"}
thiserror = "2.0.3"
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"
futures = "0.3.31"
k256 = "0.13.4"
sha3 = "0.10.8"
sxt-core = { workspace = true, features = ["std"]}
sxt-runtime = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"]}
prometheus = "0.12.0"
ratatui = "=0.23.0"
crossterm = "0.28.1"
snafu = { workspace = true }
translation-layer.workspace = true
tokio-stream = "0.1.17"

[lints]
workspace = true
