[package]
name = "pallet-attestation"
description = "SxT Pallet for providing on chain attestation"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
k256 = { version = "0.13.4", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
sxt-core.workspace = true
pallet-permissions.workspace = true
pallet-keystore.workspace = true

[dev-dependencies]
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"pallet-permissions/std",
	"pallet-keystore/std",
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"k256/std",
	"sha3/std",
	"sxt-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
